--- a/.github/workflows/go-lint.yaml
+++ b/.github/workflows/go-lint.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
           filters: |
             src:
-              - ${{ matrix.folder }}
+              - ${{ matrix.folder }}/**
               - ".github/workflows/go-lint.yaml"
       - if: steps.changes.outputs.src == 'true'
         name: golangci-lint
