chore: update renovate.json

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -34,5 +34,13 @@
       "allowedVersions": "<1.19.0",
       "postUpdateOptions": ["gomodTidy"]
     }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)Makefile$"],
+      "matchStrings": ["ALPINE_VERSION := (?<currentValue>.*?)\\n"],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "alpine"
+    }
   ]
 }
