--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,7 +14,7 @@
      "stabilityDays":0
   },
   "separateMajorMinor":false,
-  "ignorePaths": ["infra/concourse/**", "config-connector/**", "docs/**"],
+  "ignorePaths": ["config-connector/**"],
   "additionalBranchPrefix": "{{parentDir}}-",
   "packageRules": [
     {
@@ -23,6 +23,10 @@
         ":semanticCommitTypeAll(chore)",
         ":rebaseStalePrs"
       ]
+    },
+    {
+      "matchPackageNames": ["google", "google-beta"],
+      "groupName": "terraform google provider"
     },
     {
       "matchDepTypes": ["require"],
