--- a/cli/bpmetadata/int-test/goldens/golden-metadata.yaml
+++ b/cli/bpmetadata/int-test/goldens/golden-metadata.yaml
@@ -1,14 +1,14 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: cloud-foundation-toolkit
+  name: terraform-google-cloud-storage
   annotations:
     config.kubernetes.io/local-config: "true"
 spec:
   info:
     title: Terraform Google Cloud Storage Module
     source:
-      repo: https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit
+      repo: https://github.com/terraform-google-modules/terraform-google-cloud-storage.git
       sourceType: git
     version: 4.0.0
     actuationTool:
