--- a/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
+++ b/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
@@ -2,11 +2,13 @@ apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
   name: terraform-google-cloud-storage-display
+  annotations:
+    config.kubernetes.io/local-config: "true"
 spec:
   info:
     title: Terraform Google Cloud Storage Module
     source:
-      repo: https://github.com/terraform-google-modules/terraform-google-cloud-storage.git
+      repo: https://github.com/terraform-google-modules/terraform-google-cloud-storage
       sourceType: git
   ui:
     input:
