--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -35,5 +35,6 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '~1.18'
+        cache-dependency-path: cli/go.sum
     - run: |-
         go test ./... -v
