--- a/.github/workflows/go-fbf-test.yml
+++ b/.github/workflows/go-fbf-test.yml
@@ -29,5 +29,6 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '~1.18'
+        cache-dependency-path: infra/utils/fbf/go.sum
     - run: |-
         go test ./... -v
