--- a/.github/workflows/go-module-swapper.yml
+++ b/.github/workflows/go-module-swapper.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   unit:
-    name: Module Swapper Unit Tests
+    name: ${{ matrix.operating-system }} unit tests
     runs-on: ${{ matrix.operating-system }}
     defaults:
       run:
@@ -28,6 +28,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
-        go-version: '~1.18'
+        go-version-file: infra/build/developer-tools/build/scripts/module-swapper/go.mod
+        cache-dependency-path: infra/build/developer-tools/build/scripts/module-swapper/go.sum
     - run: |-
         go test ./... -v
