--- a/.github/workflows/test-cli.yml
+++ b/.github/workflows/test-cli.yml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   unit:
-    name: CLI ${{ matrix.operating-system }} unit tests
+    name: ${{ matrix.operating-system }} unit tests
     runs-on: ${{ matrix.operating-system }}
     defaults:
       run:
@@ -34,7 +34,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
-        go-version: '~1.18'
+        go-version-file: cli/go.mod
         cache-dependency-path: cli/go.sum
     - run: |-
         go test ./... -v
