--- a/.github/workflows/go-fbf-test.yml
+++ b/.github/workflows/go-fbf-test.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   unit:
-    name: FBF ${{ matrix.operating-system }} Unit Tests
+    name: ${{ matrix.operating-system }} unit tests
     runs-on: ${{ matrix.operating-system }}
     defaults:
       run:
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
-        go-version: '~1.18'
+        go-version-file: infra/utils/fbf/go.mod
         cache-dependency-path: infra/utils/fbf/go.sum
     - run: |-
         go test ./... -v
