repo details logic modification

--- a/cli/testdata/bpmetadata/content/examples/simple_regional/metadata.yaml
+++ b/cli/testdata/bpmetadata/content/examples/simple_regional/metadata.yaml
@@ -5,3 +5,6 @@ metadata:
 spec:
   info:
     title: Terraform Google Module
+    source:
+      repo: https://github.com/GoogleCloudPlatform/terraform-google-module
+      sourceType: git
