--- a/infra/blueprint-test/.gitignore
+++ b/infra/blueprint-test/.gitignore
@@ -44,7 +44,7 @@ crash.log
 **/Gemfile.lock
 
 test/fixtures/shared/terraform.tfvars
-test/setup/simple_tf_module/terraform.tfvars
+test/setup/terraform.tfvars
 
 test/integration/gcloud/config.sh
 test/integration/tmp
