--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -23,7 +23,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '~1.18'
+          go-version-file: cli/go.mod
+          cache-dependency-path: cli/go.sum
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
