addresses comments from 216740f

--- a/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
+++ b/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
@@ -8,7 +8,7 @@ spec:
   info:
     title: Terraform Google Cloud Storage Module
     source:
-      repo: https://github.com/terraform-google-modules/terraform-google-cloud-storage
+      repo: https://github.com/terraform-google-modules/terraform-google-cloud-storage.git
       sourceType: git
   ui:
     input:
