--- a/cli/testdata/bpmetadata/content/examples/acm/metadata.yaml
+++ b/cli/testdata/bpmetadata/content/examples/acm/metadata.yaml
@@ -1,7 +1,7 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-google-module
+  name: terraform-google-acm
 spec:
   info:
-    title: Terraform Google Module
+    title: Terraform Google Module ACM
