--- a/cli/testdata/bpmetadata/content/examples/simple_regional/metadata.yaml
+++ b/cli/testdata/bpmetadata/content/examples/simple_regional/metadata.yaml
@@ -1,10 +1,10 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-google-module
+  name: simple-regional
 spec:
   info:
-    title: Terraform Google Module
+    title: Simple Regional
     source:
-      repo: https://github.com/GoogleCloudPlatform/terraform-google-module
+      repo: https://github.com/GoogleCloudPlatform/simple-regional
       sourceType: git
