--- a/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
+++ b/cli/bpmetadata/int-test/goldens/golden-metadata.display.yaml
@@ -2,6 +2,8 @@ apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
   name: terraform-google-cloud-storage-display
+  annotations:
+    config.kubernetes.io/local-config: "true"
 spec:
   info:
     title: Terraform Google Cloud Storage Module
