changed defaultValue to Value type

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ config-connector/tests/testcases/environments.yaml
 .DS_Store
 .vscode
 *.pyc
+cli/bpmetadata/*.pb.go
 cli/bpmetadata/int-test/.working
