chore: add pre-commits

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,9 @@ repos:
     rev: 36.40.3
     hooks:
       - id: renovate-config-validator
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      -  id: check-yaml
+      -  id: end-of-file-fixer
+      -  id: trailing-whitespace
