chore: test with ubuntu-20.04

--- a/.github/workflows/test-cft-devtools.yml
+++ b/.github/workflows/test-cft-devtools.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   build-dev-tools:
     name: Build CFT dev tools image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
