switch example to pod

--- a/infra/blueprint-test/examples/simple_krm_blueprint/pod.yaml
+++ b/infra/blueprint-test/examples/simple_krm_blueprint/pod.yaml
@@ -12,7 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+
 apiVersion: v1
-kind: Namespace
+kind: Pod
 metadata:
-  name: default-namespace # kpt-set: ${namespace}
+  name: nginx # kpt-set: ${pod_name}
+spec:
+  containers:
+  - name: nginx
+    image: nginx:latest
+    ports:
+    - containerPort: 80
