--- a/infra/blueprint-test/examples/simple_krm_blueprint/setters.yaml
+++ b/infra/blueprint-test/examples/simple_krm_blueprint/setters.yaml
@@ -19,4 +19,4 @@ metadata: # kpt-merge: /setters
   annotations:
     config.kubernetes.io/local-config: "true"
 data:
-  namespace: simple-krm-blueprint
+  pod_name: simple-krm-blueprint
