--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -3,9 +3,8 @@ on:
   schedule:
     - cron: "0 2 * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - 'master'
+  release:
+    types: [released]
 
 env:
   TERRAFORM_URL: "https://api.github.com/repos/hashicorp/terraform/releases/latest"
